--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,21 +1,21 @@
 plugins:
-  openid_connect_enabled:
+  vivokey_openid_enabled:
     default: false
-  openid_connect_discovery_document:
+  vivokey_openid_discovery_document:
     default: ""
-  openid_connect_client_id:
+  vivokey_openid_client_id:
     default: ""
-  openid_connect_client_secret:
+  vivokey_openid_client_secret:
     default: ""
-  openid_connect_allow_association_change:
+  vivokey_openid_allow_association_change:
     default: false
-  openid_connect_authorize_scope:
+  vivokey_openid_authorize_scope:
     default: "openid"
-  openid_connect_verbose_logging:
+  vivokey_openid_verbose_logging:
     default: false
-  openid_connect_token_scope:
+  vivokey_openid_token_scope:
     default: ""
-  openid_connect_error_redirects:
+  vivokey_openid_error_redirects:
     default: ''
     type: list
     list_type: secret
